# CSA-Project-Tasks-Dashboard

./: README.md  pyproject.toml  streamlit_app.py
data/: Dim_Employee.csv  Fact_Monthly Work Plan Details.csv  Fact_MonthlyPlan.csv  Fact_Work Done.csv
