[tool.poetry]
name = "csa_project_dashboard"
version = "0.1.0"
description = ""
authors = ["Archiet Kannan <archietk@zohomail.in>"]
readme = "README.md"
packages = [{ include = "csa_project_dashboard" }]  # Ensure package directory is defined

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
beautifulsoup4 = "^4.13.3"
altair = "^5.4.0"
streamlit = "^1.43.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
